--- a/src/GGL.Web.App/src/shared/components/checkbox/checkbox.component.html
+++ b/src/GGL.Web.App/src/shared/components/checkbox/checkbox.component.html
@@ -1,9 +1,12 @@
-<div class="checkbox-field" [ngClass]="{'disabled': isDisabled}">
-    <span *ngIf="label" class="checkbox-label">{{label}}</span>
-    <input type="checkbox" 
-        [disabled]="isDisabled" 
-        [checked]="isChecked" 
-        [ngClass]="{'disabled': isDisabled}" 
-        (change)="handleClick($event)"/>
-    <span class="checkmark"></span>
+<div class="ggl-checkbox" 
+    [ngClass]="{'disabled': isDisabled}"
+    (click)="handleClick()"
+    >
+        <span *ngIf="label" class="checkbox-label">{{label}}</span>
+        <input type="checkbox" 
+            [disabled]="isDisabled" 
+            [checked]="isChecked" 
+            [ngClass]="{'disabled': isDisabled, 'selected': isChecked}" 
+            />
+        <span class="checkmark"></span>
 </div>
