--- a/src/GGL.Web.App/src/shared/components/icon/icon.component.html
+++ b/src/GGL.Web.App/src/shared/components/icon/icon.component.html
@@ -1,4 +1,4 @@
-<div class="icon {{cssStyle}} icon-{{size}}">
+<div class="icon {{cssStyle}} icon-{{size}}" (click)="handleClick()">
     <mat-icon aria-hidden="false" class="md-{{size}}" 
         [ngClass]="iconCssStyle"
         [aria-label]="title" [fontIcon]="icon">
