--- a/src/GGL.Web.App/src/shared/components/checkbox/checkbox.component.scss
+++ b/src/GGL.Web.App/src/shared/components/checkbox/checkbox.component.scss
@@ -1,9 +1,9 @@
 @import '../../../assets/css/color.scss';
 
-.checkbox-field {
+.ggl-checkbox {
     display: block;
     position: relative;
-    padding-left: 35px;
+    padding-left: 2.5rem;
     margin-bottom: 12px;
     cursor: pointer;
     font-size: 10pt;
@@ -20,7 +20,7 @@
         width: 0;
 
         &:checked~.checkmark {
-            background-color: $color-skyblue-dark;
+            background-color: $color-green;
         }
 
         &:checked~.checkmark:after {
@@ -33,7 +33,8 @@
         top: 0;
         left: 0;
         height: 1.8rem;
-        width: 1.8rem;    
+        width: 1.8rem;
+        border-radius: 50%;  
         background-color: $color-white;
         border: solid 0.1rem $color-light-gray;
 
