Added multiselect, tab and modified common components

--- a/src/GGL.Web.App/src/shared/components/checkbox/checkbox.component.scss
+++ b/src/GGL.Web.App/src/shared/components/checkbox/checkbox.component.scss
@@ -45,10 +45,10 @@
 
             left: .5rem;
             top: .2rem;; 
-            width: 5px;
-            height: 10px;
+            width: .6rem;
+            height: .9rem;
             border: solid $color-white;
-            border-width: 0 .3rem .3rem 0;
+            border-width: 0 0.2rem 0.2rem 0;
             -webkit-transform: rotate(45deg);
             -ms-transform: rotate(45deg);
             transform: rotate(45deg);
