--- a/src/GGL.Web.App/src/shared/components/input/input.component.scss
+++ b/src/GGL.Web.App/src/shared/components/input/input.component.scss
@@ -2,12 +2,13 @@
 
 .ggl-input-field {
     background-color: $color-white;
-    width: 100%;
+    min-width: 10rem;
+    width: inherit;
     border: solid .1rem $color-lighter-gray;
 
     input {
         color: $color-gray;
-        width: inherit;
+        width: 100%;
         padding: .5rem .2rem .5rem 1rem;
         line-height: 2.5rem;
         border: none;
@@ -22,6 +23,7 @@
     display: inline-flex;
     margin-top: 0.2rem;
     padding-right: 0.5rem;
+    width: 100%;
 
     input {
         width: 98%;
