--- a/src/GGL.Web.App/src/shared/components/select/select.component.html
+++ b/src/GGL.Web.App/src/shared/components/select/select.component.html
@@ -1,14 +1,8 @@
-<div class="ggl-input-field" [ngClass]="{'show-icon': showIcon || enableSearch}">
-    <select  
-        (onchange)="handleChange($event)"
-        [multiple]="allowMultiple">
-        <option *ngFor="let option in options" [selected]="option.selected" [value]="option.value">
-            <span *ngIf="!allowMultiple">{{option.text}}</span>
-            <span *ngIf="selectedItems && selectedItems.length">
-                <ggl-checkbox (click)="handleCheck(option)"></ggl-checkbox>
-                {{selectedItems[0].text}}
-                <span class="mutil-selection">(+ {{selectedItems.length > 2 ? 'others' : 'other'}} )</span>
-            </span>
+<div class="ggl-select" [ngClass]="{'disabled': isDisabled}">
+    <select (change)="handleChange($event)" [disabled]="isDisabled">
+        <option *ngIf="addEmptyOption">{{itemPlaceholder}}</option>
+        <option *ngFor="let option of options" [selected]="option.selected" [value]="option.value">
+            {{option.text}}
         </option>
-    </mat-select>
+    </select>
 </div>
