--- a/src/GGL.Web.App/src/shared/components/checkbox/checkbox.component.html
+++ b/src/GGL.Web.App/src/shared/components/checkbox/checkbox.component.html
@@ -1,4 +1,4 @@
-<div class="ggl-checkbox" 
+<span class="ggl-checkbox" 
     [ngClass]="{'disabled': isDisabled}"
     (click)="handleClick()"
     >
@@ -9,4 +9,4 @@
             [ngClass]="{'disabled': isDisabled, 'selected': isChecked}" 
             />
         <span class="checkmark"></span>
-</div>
+</span>
