--- a/src/GGL.Web.App/src/shared/components/icon/icon.component.scss
+++ b/src/GGL.Web.App/src/shared/components/icon/icon.component.scss
@@ -7,6 +7,10 @@
         padding: .4rem .3rem 0 .5rem;
         font-weight: 400;
     }
+
+    .mat-icon {
+        padding-top: .2rem;
+    }
 }
 
 .icon-style {
