--- a/src/GGL.Web.App/src/shared/components/multiselect/multiselect.component.html
+++ b/src/GGL.Web.App/src/shared/components/multiselect/multiselect.component.html
@@ -1,29 +1,29 @@
-<div class="ggl-multiselect" gglClickOutside (afterClosed)="hideOption()">
-    <div class="select-container">
-        <div class="selected-item" *ngFor="let option of selectedOptions">
-            <ggl-icon 
-                [icon]="closeIcon"
+<div class="chosen-container" [ngClass]="{'disabled': disabled}" gglClickOutside (afterClosed)="hideOption()">
+    <ul class="selected-items">
+        <li class="search-choice" *ngFor="let option of selectedOptions">
+            <ggl-icon *ngIf="!disabled" [icon]="closeIcon" 
                 [size]="closeIconSize" 
                 [label]="option.text" 
                 [position]="closeIconPosition"
-                [showLabel]="showLabel"
-                (clicked)="removeItem(option)">
+                [showLabel]="showLabel" (clicked)="removeItem(option)">
             </ggl-icon>
-        </div>
-        <ggl-input 
-            (clicked)="showOption($event)"
-            (blured)="searchItem($event)"
-            (iconClick)="toggle()">
-        </ggl-input>
-    </div>
-    <div class="list" *ngIf="showOptions">
-        <ul>
+            <span *ngIf="disabled">{{option.text}}</span>
+        </li>
+        <li class="search-field">
+            <ggl-input
+                [disabled]="disabled"
+                [outline]="showOutline"
+                (clicked)="showOption($event)"
+                (blured)="searchItem($event)"
+                (iconClick)="toggle()">
+            </ggl-input>
+        </li>
+    </ul>
+    <div class="list" *ngIf="showOptions && !disabled">
+        <ul class="list-items">
             <li *ngFor="let option of filteredOptions" (click)="addItem(option)">
-                <ggl-icon *ngIf="showIcons && option.icon" [label]="option.text" 
-                    [icon]="option.icon"
-                    [size]="option.iconSize"
-                    [showLabel]="showLabel"
-                >
+                <ggl-icon *ngIf="showIcons && option.icon" [label]="option.text" [icon]="option.icon"
+                    [size]="option.iconSize" [showLabel]="showLabel">
                 </ggl-icon>
                 <span *ngIf="!showIcons">{{ option.text }}</span>
             </li>
