--- a/src/GGL.Web.App/src/shared/components/radio/radio.component.scss
+++ b/src/GGL.Web.App/src/shared/components/radio/radio.component.scss
@@ -4,6 +4,7 @@
     display: inline-flex;
     position: relative;
     padding-left: 2.5rem;
+    padding-right: .5rem; 
     cursor: pointer;
     font-size: 10pt;
 
