--- a/src/GGL.Web.App/src/assets/css/style.css
+++ b/src/GGL.Web.App/src/assets/css/style.css
@@ -13,7 +13,7 @@
 body {
     font-family: Arial;
     line-height: 1.6;
-    font-size: 16px;
+    font-size: 10pt;
     background: #fff;
     color: #848484;
     font-weight: 300;
@@ -27,7 +27,6 @@ body {
 
 p, ul, ol {
     margin-bottom: 1.5em;
-    font-size: 16px;
     color: #848484;
 }
 
